[gd_scene load_steps=2 format=3 uid="uid://gy7cvf1whw1e"]

[ext_resource type="Script" path="res://OtherScene/UI/SettingOption/setting_option.gd" id="1_nu166"]

[node name="SettingOption" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nu166")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Head" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Titie" type="Label" parent="MarginContainer/VBoxContainer/Head"]
layout_mode = 2
text = "<Setting>"
horizontal_alignment = 1

[node name="Body" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PageButton" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
layout_mode = 2

[node name="Graphic" type="Button" parent="MarginContainer/VBoxContainer/Body/PageButton"]
layout_mode = 2
size_flags_vertical = 3
text = "<Graphic>"

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer/Body/PageButton"]
layout_mode = 2
size_flags_vertical = 3
text = "<Audio>"

[node name="Control" type="Button" parent="MarginContainer/VBoxContainer/Body/PageButton"]
layout_mode = 2
size_flags_vertical = 3
text = "<Control>"

[node name="Other" type="Button" parent="MarginContainer/VBoxContainer/Body/PageButton"]
layout_mode = 2
size_flags_vertical = 3
text = "<Other>"

[node name="SettingPage" type="TabContainer" parent="MarginContainer/VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="GraphicsSetting" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage"]
layout_mode = 2

[node name="GraphicsSetting" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreenOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/FullScreenOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<FullScreen>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/FullScreenOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="FullScreen" type="CheckBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/FullScreenOption"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ResolutionOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<Resolution>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ResolutionOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ResolutionOption"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "720x480"
popup/item_1/id = 1
popup/item_2/text = "720x576"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "1366x768"
popup/item_4/id = 4
popup/item_5/text = "1920x1080"
popup/item_5/id = 5

[node name="V-SyncOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/V-SyncOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<V-Sync>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/V-SyncOption"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Empty2" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/V-SyncOption"]
layout_mode = 2
size_flags_horizontal = 3

[node name="V-Sync" type="OptionButton" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/V-SyncOption"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "<Disable>"
popup/item_0/id = 0
popup/item_1/text = "<Enable>"
popup/item_1/id = 1
popup/item_2/text = "<Adaptive>"
popup/item_2/id = 2
popup/item_3/text = "<Mailbox>"
popup/item_3/id = 3

[node name="MaxFPSOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/MaxFPSOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<MaxFPS>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/MaxFPSOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MaxFPS" type="SpinBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/MaxFPSOption"]
layout_mode = 2
size_flags_horizontal = 3
value = 60.0

[node name="ScreenVibrationOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ScreenVibrationOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<ScreenVibration>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ScreenVibrationOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScreenVibration" type="CheckBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ScreenVibrationOption"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioSetting" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage"]
visible = false
layout_mode = 2

[node name="AudioSetting" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolumeOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/MasterVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<MasterVolume>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/MasterVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MasterVolume" type="SpinBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/MasterVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0
suffix = "dB"

[node name="BGMVolumeOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/BGMVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<BGMVolume>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/BGMVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="BGMVolume" type="SpinBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/BGMVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0
suffix = "dB"

[node name="SFXVolumeOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/SFXVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "<SFXVolume>"

[node name="Empty" type="Control" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/SFXVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="SFXVolume" type="SpinBox" parent="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/SFXVolumeOption"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0
suffix = "dB"

[node name="ControlSetting" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage"]
visible = false
layout_mode = 2

[node name="ControlSetting" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/ControlSetting"]
visible = false
layout_mode = 2

[node name="OtherSetting" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage"]
visible = false
layout_mode = 2

[node name="OtherSetting" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/SettingPage/OtherSetting"]
visible = false
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Body/SettingPage"]
visible = false
layout_mode = 2
tick_count = 6

[node name="Completed" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "<Completed>"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/PageButton/Graphic" to="." method="_on_graphic_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/PageButton/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/PageButton/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/PageButton/Other" to="." method="_on_other_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/FullScreenOption/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ResolutionOption/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/V-SyncOption/V-Sync" to="." method="_on_v_sync_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/MaxFPSOption/MaxFPS" to="." method="_on_max_fps_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Body/SettingPage/GraphicsSetting/GraphicsSetting/ScreenVibrationOption/ScreenVibration" to="." method="_on_screen_vibration_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/MasterVolumeOption/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/BGMVolumeOption/BGMVolume" to="." method="_on_bgm_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Body/SettingPage/AudioSetting/AudioSetting/SFXVolumeOption/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Completed" to="." method="_on_completed_pressed"]
